Fix: hero image blur on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -507,6 +507,9 @@ section#footer{
     body section#shows div.content-frame{
         padding: 20px;
     }
+    body section#picture1{
+        filter: blur(0px);
+    }
 }
 
 @media only screen and (max-width: 380px){
